2008-02-18  Mark Ellis  <mark@mpellis.org.uk>

	* raki/plugins/Makefile.am - added pimsync to SUBDIRS for make dist

2005-02-24 01:02  voc

	* amd64/gcc-4.0 compile fix

2004-08-28 21:50  voc

	* Doxyfile: New Doxyfile

2004-08-28 21:49  voc

	* Makefile.am: Add orange.m4 to acinclude.m4

2004-08-28 21:46  voc

	* raki/plugins/agsync/: agsyncconfigimpl.cpp, agsyncconfigimpl.h:
	  Then cancel button now really cancels

2004-08-28 21:45  voc

	* raki/plugins/agsync/clients/: .cvsignore, Makefile.am,
	  smelter.rarm.CAB, smelter.rmips.CAB, smelter.rsh3.CAB: Remove the
	  AvantGo client binaries ... i will ask sourceforge to remove them
	  also from the filesystem.

2004-08-28 21:43  voc

	* raki/plugins/agsync/: agsync.cpp,
	  avantgoclientinstallationdialog.ui,
	  avantgoclientinstallationdialogimpl.cpp,
	  avantgoclientinstallationdialogimpl.h: The AvantGo client isn't
	  installed automatically anymore ... some code and a dialog added
	  to support gui-based manual installation of the client.

2004-08-28 21:42  voc

	* raki/plugins/agsync/Makefile.am: Format change

2004-08-28 21:41  voc

	* raki/plugins/Makefile.am: KDE-Addressbook synchronizer removed
	  ... will be replaced by Christians code

2004-08-28 21:39  voc

	* vdccm/vdccm.c: Disconnect mechanism added - vdccm is also changed
	  accordingly

2004-08-28 21:39  voc

	* raki/workerthreadinterface.h: Syntax-logic change

2004-08-28 21:37  voc

	* raki/syncdialogimpl.cpp: Dialog now also accepts unseccessfull
	  pre and post sync

2004-08-28 21:36  voc

	* raki/: rra.cpp, rra.h, wince_ids.cpp, wince_ids.h: Removed
	  KAddress handling code ... goes into Christians plugin

2004-08-28 21:35  voc

	* raki/: rakiapi.cpp, rakiapi.h: Orange extraction mechanism added.

2004-08-28 21:34  voc

	* raki/raki.cpp: Disconnect mechanism added - vdccm is also changed
	  accordingly

2004-08-28 21:32  voc

	* raki/pdaconfigdialogimpl.cpp: Ok button and Cancel button
	  bahaviour changed. Now its more intuitive
