@@ -6,8 +6,8 @@ AM_LDFLAGS = @LIBRRA_LIBS@ @LIBORANGE_LIBS@
 kde_module_LTLIBRARIES = kio_rapip.la
 
 kio_rapip_la_SOURCES = rapip.cpp
-kio_rapip_la_LIBADD = -lkio $(RAPI_LIB) $(SYNCE_LIB)
-kio_rapip_la_LDFLAGS = -avoid-version -module $(all_libraries) $(KDE_PLUGIN) $(RAPI_LDFLAGS) $(SYNCE_LDFLAGS)
+kio_rapip_la_LIBADD = -lkio $(LIBRAPI_LIBS)
+kio_rapip_la_LDFLAGS = -avoid-version -module $(all_libraries) $(KDE_PLUGIN)
 
 protocol_DATA = rapip.protocol
 protocoldir = $(kde_servicesdir)
